# dbt-demo

./: README.rst  dbt_project.yml  pyproject.toml
models/marts/core/: dim_customers.sql  fct_orders.sql
models/staging/jaffle_shop/: src_jaffle_shop.yml  src_stripe.yml  stg_customers.sql  stg_orders.sql  stg_payments.sql
