[tool.poetry]
name = "dbt-demo"
version = "0.1.0"
description = ""
authors = ["Jake <jake.t.bouma@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dbt-snowflake = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
